# apryls_final_project

./: README.md  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
apryls_final_project/: sad_attempt.py
apryls_final_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apryls_final_project/.ipynb_checkpoints/: sad_attempt-checkpoint.py
notebook/: Animals.ipynb
notebook/.ipynb_checkpoints/: Animals-checkpoint.ipynb
pip-wheel-metadata/apryls_final_project-0.1.0.dist-info/: METADATA
tests/: test_apryls_final_project.py
tests/.ipynb_checkpoints/: test_apryls_final_project-checkpoint.py
