[tool.poetry]
name = "apryls_final_project"
version = "0.1.0"
description = ""
authors = ["Apryl S <aprylsusi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
